[package]
name = "audio"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4"
serde = { verion = "1.0", features = ["derive"] }
image = "*"
palette = "*"
lazy_static = "*"
bincode = "*"
rayon = "*"